hover effect and white space issue

--- a/reactapp/src/assets/css/main.css
+++ b/reactapp/src/assets/css/main.css
@@ -6158,12 +6158,13 @@ blockquote cite {
   border-radius: 6px;
   padding: 0 45px;
   font-weight: 500;
+  width: 4%;
 }
-
-.appie_checkbox_common {
-  margin-top: 15px;
+.appie-header-main-menu ul > li a:hover {
+ color: #cc1c3b;
+ box-shadow: 0px 40px 40px 0px rgb(14 17 51 / 10%);
+ transform: translateY(-2px);
 }
-
 .appie_checkbox_common label {
   color: #fff;
   font-size: 14px;
@@ -8513,6 +8514,7 @@ button[type=submit] {
   -moz-border-radius: 0 30px 30px 0;
   border-radius: 0 30px 30px
 }
+
 .bora{
   border-radius: 9px;
 }
